2009-09-04 Magnus Hagdorn
 * Makefile.am: add new subdirectory
 * configure.in: create new Makefile
 * libglide: populate libglide

2009-09-04 Magnus Hagdorn
 * doc/Makefile.am: only build figures if documentation is built
 * libglimmer/Makefile.am: forgot to the ncdf template
 * libglimmer/solve/Makefile.am: add sparse matrix handler

2009-09-03 Magnus Hagdorn
 * libglimmer/Makefile.am: add targets for libglimmer-IO.a

2009-09-03 Magnus Hagdorn
 * configure.in: add new subdirectory
 * libglimmer/Makefile.am: handle new subdirectory
 * libglimmer/solve/SLAP/Makefile.am: handle dependencies, run SLAP test
 * libglimmer/blas: added reference implementation of BLAS required for
   SLAP from netlib

2009-09-03 Magnus Hagdorn
 * configure.in: add new directories
 * libglimmer/Makefile.am: decent into new subdirectory
 * add vanilla SLAP library

2009-09-03 Magnus Hagdorn
 * Makefile.am: add new sub-directories
 * configure.in: uncomment restart facility, handle new directories
 * add scripts
 * add files for libglimmer

2009-09-02 Magnus Hagdorn
 * Makefile.am: decent into documentation directory
 * configure.in: make documentation builds configure option
 * doc/glimmer.tex: no longer autogenerated
 
2009-09-02 Magnus Hagdorn
 * copy documentation and get it to compile

2009-09-02 Magnus Hagdorn
 * populate project with basic files to get autotools to work