@@ -14,6 +14,7 @@ LIBTOOLIZE=${LIBTOOLIZE-libtoolize}
 
 AUTOCONF_REQUIRED_VERSION=2.54
 AUTOMAKE_REQUIRED_VERSION=1.9.6
+LIBTOOL_REQUIRED_VERSION=1.5
 
 check_version ()
 {
@@ -54,9 +55,27 @@ check_version ()
     fi
 }
 
-echo
+echo -n "checking for libtool >= $LIBTOOL_REQUIRED_VERSION ... "
+if ($LIBTOOLIZE --version) < /dev/null > /dev/null 2>&1; then
+   LIBTOOLIZE=$LIBTOOLIZE
+elif (glibtoolize --version) < /dev/null > /dev/null 2>&1; then
+   LIBTOOLIZE=glibtoolize
+else
+    echo
+    echo "  You must have libtool installed to compile $PROJECT."
+    echo "  Install the appropriate package for your distribution,"
+    echo "  or get the source tarball at ftp://ftp.gnu.org/pub/gnu/"
+    echo
+    DIE=1
+fi
+
+if test x$LIBTOOLIZE != x; then
+    VER=`$LIBTOOLIZE --version \
+         | grep libtool | sed "s/.* \([0-9.]*\)[-a-z0-9]*$/\1/"`
+    check_version $VER $LIBTOOL_REQUIRED_VERSION
+fi
+
 echo Checking if required version of automake is installed
-echo
 
 DIE=0
 
@@ -109,7 +128,15 @@ fi
 
 rm -rf autom4te.cache
 
-$ACLOCAL -I m4macros\
-&& $AUTOHEADER \
-&& $AUTOMAKE --gnu --add-missing \
-&& $AUTOCONF
+$ACLOCAL -I m4macros
+RC=$?
+if test $RC -ne 0; then
+   echo "$ACLOCAL gave errors. Please fix the error conditions and try again."
+   exit $RC
+fi
+
+$LIBTOOLIZE --force || exit $?
+$AUTOHEADER || exit $?
+$AUTOMAKE --gnu --add-missing || exit $?
+$AUTOCONF || exit $?
+
