@@ -1,12 +1,12 @@
-if EXT_BLAS
- BLAS_DIR =
-else
- BLAS_DIR = blas
-endif
+#if EXT_BLAS
+# BLAS_DIR =
+#else
+# BLAS_DIR = blas
+#endif
 
-SUBDIRS = $(BLAS_DIR) solve
+SUBDIRS = $(BLAS_DIR)
 
-lib_LIBRARIES = libglimmer.a libglimmer-IO.a
+lib_LTLIBRARIES = libglimmer.la libglimmer-IO.la
 bin_PROGRAMS  =  nc2config
 check_PROGRAMS = test_config test_integrate test_commandline test_ts test_writestats
 
@@ -18,7 +18,7 @@ dist_variable_DATA = $(variable_DATA)
 nodist_include_HEADERS := $(wildcard *.mod)
 EXTRA_DIST = f90_dep.mak 
 CLEANFILES = $(BUILT_SOURCES) glimmer_vers.F90 f90_dep.mak
-libglimmer_a_SOURCES = glimmer_vers.F90 glimmer_commandline.F90 \
+libglimmer_la_SOURCES = glimmer_vers.F90 glimmer_commandline.F90 \
                        glimmer_global.F90 glimmer_utils.F90\
                        glimmer_log.F90 glimmer_paramets.F90 glimmer_physcon.F90 kelvin.F90 \
                        profile.F90  \
@@ -27,15 +27,15 @@ libglimmer_a_SOURCES = glimmer_vers.F90 glimmer_commandline.F90 \
                        glimmer_map_CFproj.F90 glimmer_map_proj4.F90 \
                        glimmer_map_types.F90 glimmer_map_init.F90 \
                        glimmer_map_trans.F90
-nodist_libglimmer_a_SOURCES = glimmer_vers.F90
+nodist_libglimmer_la_SOURCES = glimmer_vers.F90
 
-libglimmer_IO_a_SOURCES = glimmer_anomcouple.F90 glimmer_filenames.F90 glimmer_ncdf.F90 \
+libglimmer_IO_la_SOURCES = glimmer_anomcouple.F90 glimmer_filenames.F90 glimmer_ncdf.F90 \
                           glimmer_ts.F90 glimmer_config.F90 \
                           glimmer_writestats.F90 ncdf_utils.F90 test_ts.F90 \
                           test_writestats.F90 writestats.c writestats.h cfortran.h 
 
 nc2config_SOURCES = nc2config.F90
-nc2config_LDADD = libglimmer-IO.a libglimmer.a $(NETCDF_LDFLAGS) $(HDF5_LDFLAGS) $(NETCDF_LIBS)
+nc2config_LDADD = libglimmer-IO.la libglimmer.la $(NETCDF_LDFLAGS) $(HDF5_LDFLAGS) $(NETCDF_LIBS)
 
 test_config_SOURCES = test_config.F90 glimmer_config.F90 glimmer_log.F90
 test_integrate_SOURCES = test_integrate.F90 glimmer_global.F90 \
