@@ -1,8 +1,0 @@
-SUBDIRS = SLAP
-
-lib_LIBRARIES = libglimmer-solve.a
-
-libglimmer_solve_a_SOURCES = glimmer_sparse.F90
-nodist_include_HEADERS := $(wildcard *.mod)
-
-AM_FCFLAGS = -I..
